# Ezlo_Pi

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE.md  LICENCE.txt  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  RELEASE_NOTES.md  V3-1-4-181_release_note.md  ble_onbording.md  build.sh  burn_id.sh  exit  ezlopi_partitions_v3_1_4_181_4mb.csv  ezlopi_partitions_v3_1_4_181_4mb.debug.csv  ezlopi_partitions_v3_1_4_181_4mb_secure.csv  ezlopi_partitions_v3_1_4_181_8mb.csv  flash.sh  flash_ez_config.sh  gdbinit  ieee-iab.txt  my_rsa3072_signing_key.pem  partitions.csv  refactorer.py  release-notes.md  renamer.py  sdkconfig  sdkconfig .ep32.4mb.debug  sdkconfig copy  sdkconfig.esp32.4mb  sdkconfig.esp32.4mb.secure  sdkconfig.esp32.4mb.unsecure  sdkconfig.esp32c3  sdkconfig.esp32c3.4mb  sdkconfig.esp32s2.4mb  sdkconfig.esp32s3.4mb  (+11 more)
.github/: PULL_REQUEST_TEMPLATE.md
controllers-configurations/: config.json  read_flash.sh  write_config.sh  write_flash.sh
dashboard_qt/: .gitignore  Makefile  Makefile.Debug  Makefile.Release  dialog_adc.cpp  dialog_adc.h  dialog_adc.ui  dialog_config_adc.cpp  dialog_config_adc.h  dialog_config_adc.ui  dialog_config_i2c.cpp  dialog_config_i2c.h  dialog_config_i2c.ui  dialog_config_input.cpp  dialog_config_input.h  dialog_config_input.ui  dialog_config_onewire.cpp  dialog_config_onewire.h  dialog_config_onewire.ui  dialog_config_spi.cpp  dialog_config_spi.h  dialog_config_spi.ui  dialog_configdev_digitalio.cpp  dialog_configdev_digitalio.h  dialog_configdev_digitalio.ui  dialog_devadd.cpp  dialog_devadd.h  dialog_devadd.ui  dialog_login.cpp  dialog_login.h  dialog_login.ui  dialog_wifi.cpp  dialog_wifi.h  dialog_wifi.ui  esp_gpio_config.pro  ezlopi.cpp  ezlopi.h  ezpi_data_types.cpp  ezpi_data_types.h  ezuuid.h  (+19 more)
devices/0009_other_RMT_SK6812/: 0009_other_RMT_SK6812.c  CMakeLists.txt
devices/0055_sensor_ADC_FlexResistor/: 0055_sensor_ADC_FlexResistor.h  CMakeLists.txt
devices/0065_sensor_digitalIn_float_switch/: 0065_sensor_digitalIn_float_switch.c  0065_sensor_digitalIn_float_switch.h  CMakeLists.txt
devices/031_JSN_SR04T_WaterLevelSensor/: CMakeLists.txt  jsn_sr04t_device.h
devices/device_0001_digitalOut_generic/: CMakeLists.txt  device_0001_digitalOut_generic.c  device_0001_digitalOut_generic.h
devices/device_0002_digitalOut_relay/: CMakeLists.txt  device_0002_digitalOut_relay.c  device_0002_digitalOut_relay.h  ezlopi_devices_list.c
devices/device_0009_other_RMT_SK6812/: CMakeLists.txt  device_0009_other_RMT_SK6812.c  device_0009_other_RMT_SK6812.h
devices/sensor_0006_I2C_ADXL345/: CMakeLists.txt  adxl345.c  sensor_0006_I2C_ADXL345.c  sensor_0006_I2C_ADXL345.h
devices/sensor_0008_I2C_LTR303ALS/: CMakeLists.txt  sensor_0008_I2C_LTR303ALS.c  sensor_0008_I2C_LTR303ALS.h
devices/sensor_0010_I2C_BME680/: CMakeLists.txt  bme680_bsec.c  bme680_bsec.h  sensor_0010_I2C_BME680.c  sensor_0010_I2C_BME680.h
devices/sensor_0015_oneWire_DHT11/: CMakeLists.txt  dht11.c  dht11.h  sensor_0015_oneWire_DHT11.c  sensor_0015_oneWire_DHT11.h
devices/sensor_0017_ADC_potentiometer/: CMakeLists.txt  sensor_0017_ADC_potentiometer.c  sensor_0017_ADC_potentiometer.h
devices/sensor_0018_internal_hall_effect/: CMakeLists.txt  sensor_0018_internal_hall_effect.c  sensor_0018_internal_hall_effect.h
devices/sensor_0018_other_internal_hall_effect/: CMakeLists.txt  sensor_0018_other_internal_hall_effect.c  sensor_0018_other_internal_hall_effect.h
devices/sensor_0019_digitalIn_PIR/: CMakeLists.txt  sensor_0019_digitalIn_PIR.c  sensor_0019_digitalIn_PIR.h
devices/sensor_0026_ADC_LDR/: CMakeLists.txt  sensor_0026_ADC_LDR.c  sensor_0026_ADC_LDR.h
devices/sensor_0031_other_JSNSR04T/: CMakeLists.txt  jsn_sr04t.h  sensor_0031_other_JSNSR04T.c  sensor_0031_other_JSNSR04T.c.err  sensor_0031_other_JSNSR04T.h  sensor_0031_other_JSNSR04T.h.err
devices/sensor_0033_ADC_turbidity/: CMakeLists.txt  sensor_0033_ADC_turbidity.c  sensor_0033_ADC_turbidity.h
devices/sensor_0034_digitalIn_proximity/: CMakeLists.txt  sensor_0034_digitalIn_proximity.c  sensor_0034_digitalIn_proximity.h
devices/sensor_0040_other_TCS230/: CMakeLists.txt  TCS230.c  TCS230.h  sensor_0040_other_TCS230.c  sensor_0040_other_TCS230.h
devices/sensor_0041_ADC_FC28_soilMoisture/: CMakeLists.txt  sensor_0041_ADC_FC28_soilMoisture.c  sensor_0041_ADC_FC28_soilMoisture.h
devices/sensor_0042_ADC_shunt_voltmeter/: CMakeLists.txt  sensor_0042_ADC_shunt_voltmeter.c  sensor_0042_ADC_shunt_voltmeter.h
devices/sensor_0043_ADC_GYML8511_UV_intensity/: CMakeLists.txt  sensor_0043_ADC_GYML8511_UV_intensity.c  sensor_0043_ADC_GYML8511_UV_intensity.h
devices/sensor_0043_ADC_UV_intensity/: CMakeLists.txt  sensor_0043_ADC_UV_intensity.c  sensor_0043_ADC_UV_intensity.h
devices/sensor_0044_I2C_TSL256_luminosity/: CMakeLists.txt  TSL256_interface.c  sensor_0044_I2C_TSL256_luminosity.c  sensor_0044_I2C_TSL256_luminosity.h
devices/sensor_0046_ADC_ACS712TELC_05B_currentMeter/: CMakeLists.txt  sensor_0046_ADC_ACS712TELC_05B_currentMeter.c  sensor_0046_ADC_ACS712TELC_05B_currentMeter.h
devices/sensor_0046_ADC_ACS712_currentMeter/: CMakeLists.txt  sensor_0046_ADC_ACS712_currentMeter.c  sensor_0046_ADC_ACS712_currentMeter.h
ezlopi-main/: CMakeLists.txt  Kconfig.projbuild  ezlopi_main.c  test_main.c.otel.cjson  test_main.c.test
ezlopi-src-template/: CMakeLists.txt  Readme.md  header.h  logs.json  source.c  traces.json
ezlopi-template-src/: header.h
ezlopi-user-config/: CMakeLists.txt  EZLOPI_USER_CONFIG.h
key/: my_rsa3072_public_key.pub.digest.v2
key_s3/: my_ras3072_signing_key.pem  my_rsa3072_public_key.pub
main/: CMakeLists.txt  ble_test_main.c.test  ezlopi_main.c  main.c  main.c.bme680  main.c.cgpt  main.c.led  wss_keep_alive.c  wss_server.c
shell_script/: copy_firmware.sh  provision_read.sh  provision_write.sh  version_build.sh
ui-qt/: .gitignore  dialog_config_adc.cpp  dialog_config_adc.h  dialog_config_adc.ui  dialog_config_i2c.cpp  dialog_config_i2c.h  dialog_config_i2c.ui  dialog_config_input.cpp  dialog_config_input.h  dialog_config_input.ui  (+30 more)
(+2508 files in other folders)
